[gd_scene load_steps=7 format=3 uid="uid://cksvr8m5rm5x3"]

[ext_resource type="PackedScene" uid="uid://dx36xgy83f8vw" path="res://debug_ui.tscn" id="1_3ksjr"]
[ext_resource type="Script" path="res://main.gd" id="1_rkl1y"]
[ext_resource type="PackedScene" uid="uid://c1cm7khls3r1w" path="res://classes/Unit/unit.tscn" id="2_gnb1n"]
[ext_resource type="PackedScene" uid="uid://c6lmx45nhktp" path="res://audio_manager.tscn" id="3_502kr"]
[ext_resource type="PackedScene" path="res://classes/Player/farmer.tscn" id="4_2eqrv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4if47"]
size = Vector2(2038, 53)

[node name="Main" type="Node2D"]
script = ExtResource("1_rkl1y")
unitScene = ExtResource("2_gnb1n")

[node name="AudioManager" parent="." instance=ExtResource("3_502kr")]

[node name="EnemyFarmerPickTimer" type="Timer" parent="."]

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.980392, 0.615686, 0.517647, 1)
metadata/_edit_use_anchors_ = true

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(9, 310)
collision_layer = 2
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_left = -687.0
offset_top = -2.0
offset_right = 1542.0
offset_bottom = 50.0
color = Color(0, 0.721569, 0.501961, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(355, 24.5)
shape = SubResource("RectangleShape2D_4if47")

[node name="PlayerUnitSpawnPosition" type="Marker2D" parent="."]
position = Vector2(150, 250)

[node name="EnemyUnitSpawnPosition" type="Marker2D" parent="."]
position = Vector2(461, 248)

[node name="DebugUI" parent="." instance=ExtResource("1_3ksjr")]

[node name="Farmer" parent="." instance=ExtResource("4_2eqrv")]
position = Vector2(152, 260)

[node name="EnemyFarmer" parent="." instance=ExtResource("4_2eqrv")]
modulate = Color(0.835294, 0, 0.0862745, 0.960784)
position = Vector2(515, 260)
isEnemy = true

[node name="test" type="Marker2D" parent="."]
position = Vector2(44, 290)

[connection signal="timeout" from="EnemyFarmerPickTimer" to="." method="_on_enemy_farmer_pick_timer_timeout"]
[connection signal="debugSpawnEnemyUnit" from="DebugUI" to="." method="_on_debug_ui_debug_spawn_enemy_unit"]
[connection signal="debugSpawnPlayerUnit" from="DebugUI" to="." method="_on_debug_ui_debug_spawn_player_unit"]
